--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -458,7 +458,37 @@
                                 </div>
                               </div>
                             </div>
-                          
+                            
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../../PersonalWeeklyPlan-report">My Weekly Plan</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                            
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../../PersonalDailyPlan-report">My Daily Plan</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../../outstandingTask-report">Outstanding Tasks</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+
                             <div class="col-md-12 ml-auto mr-auto">
                               <div class="row">
                                 <div class="col-md-6">
@@ -492,21 +522,12 @@
                             </div>
                           
                           
-                            <div class="col-md-12 ml-auto mr-auto">
-                              <div class="row">
-                                <div class="col-md-6">
-                                  <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../classification-log">Outstanding Action Items</a></span>
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
 
                             <!-- <div class="col-md-12 ml-auto mr-auto">
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../classification-log">My Summerized Time Sheet as @</a></span>
+                                    <span> <a routerLink="../classification-log">My Summarized Time Sheet as @</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -592,16 +613,36 @@
                                 </div>
                               </div>
                             </div>
-                          
-                          <div class="col-md-12 ml-auto mr-auto">
-                            <div class="row">
-                              <div class="col-md-6">
-                                <p class="text-left title " style="color: darkslategray">
-                                  <span> <a routerLink="../../outstandingTask-report">Outstanding Action Items</a></span>
-                                </p>
+                            
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../../PersonalWeeklyPlan-report">My Weekly Plan</a></span>
+                                  </p>
+                                </div>
                               </div>
                             </div>
-                          </div>
+                            
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../../PersonalDailyPlan-report">My Daily Plan</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../../outstandingTask-report">Outstanding Tasks</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
                           
                             <div class="col-md-12 ml-auto mr-auto">
                               <div class="row">
@@ -686,7 +727,7 @@
                                 <p class="text-left title " style="color: darkslategray">Personal Project Reports
                                 </p>
                                 <!-- <br> -->
-                              </div>
+                              </div>Total time spent on an activity in a period
                               <div class="col-md-12 ml-auto mr-auto">
                                 <p class="text-left title " style="color: darkslategray">User`s Enterprise Internal Reports</p>
                               </div>
