--- a/src/app/calendar/r-activity-log/r-activity-log.component.html
+++ b/src/app/calendar/r-activity-log/r-activity-log.component.html
@@ -6,7 +6,7 @@
     </div>
     
     <!-- Table heading -->
-    <h1 id="currUser"></h1>
+    <h1 id="UserP2"></h1>
     
     <h3>Time Sheet Report for the period from <span>
             <!-- placeholder will not work, so stuck with dd----yyyyy -->
@@ -22,11 +22,11 @@
     <table id="TbIdP2">
         <!-- headings -->
         <tr>
-            <th align="left">Action Item</th>
-            <th align="left">Task Name</th>
-            <th align="left">Start Date</th>
-            <th align="left">End Date</th>
-            <th>Hours Spent</th>
+            <th>Sub Task</th>
+            <th>Task Name</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th style="text-align:center">Hours Spent</th>
         </tr>
     </table>
     
