--- a/src/app/calendar/r-os-tasks/r-os-tasks.component.html
+++ b/src/app/calendar/r-os-tasks/r-os-tasks.component.html
@@ -2,24 +2,21 @@
     <div style="text-align:left;margin-left: 0px">
         <img alt="Colours Logo" width="100" src="../../assets/Colourslogo.png">
     </div>
-    
-    <!-- <h2 id="orgP">Personal Reports</h2> -->
 
-    <!-- Table heading -->
-    <h1>{{ userName }}</h1>
+    <h2 id="UserP0">User</h2>
 
-    <h3>Schedule of Outstanding Tasks as at <span>
+    <h4>Schedule of Outstanding Tasks as at <span>
             <!-- placeholder will not work, so stuck with dd----yyyyy -->
-            <input type="date" id="startdateP">
+            <input type="date" id="startdateP0">
     <button (click)="rService.rostasks()">View Oustanding Tasks for selected date</button>
-    </span></h3>
+    </span></h4>
     <!-- Table rows and headings only -->
-    <table id="TbIdP">
+    <table id="TbIdP0">
         <!-- headings -->
         <tr>
-            <th align="left">Task</th>
-            <th align="left">Planned Finish Date</th>
-            <th align="left">Classification</th>
+            <th>Task</th>
+            <th>Planned Finish Date</th>
+            <th>Classification</th>
         </tr>
     </table>
 </div>
