--- a/src/app/calendar/r-time-spent/r-time-spent.component.html
+++ b/src/app/calendar/r-time-spent/r-time-spent.component.html
@@ -5,25 +5,25 @@
     </div>
     
     <!-- Table heading -->
-    <h1 id="currUser"></h1>
+    <h2 id="UserP1">User</h2>
 
-    <h3>Total Time spent on an Activity for the period from <span>
+    <h4>Total Time spent on an Activity for the period from <span>
             <!-- placeholder will not work, so stuck with dd----yyyyy -->
             <input type="date" id="startdateP1">
         </span> to <span>
             <input type="date" id="enddateP1">
     <!-- <button (click)="rService.rtimespentshow()">Generate report for selected period</button> -->
     <button (click)="rService.rtimespent()">Generate report for selected period</button>
-    </span></h3>
+    </span></h4>
     <!-- button onclick="javascript:alert('kkkkk')">Try it</button> -->
     <!-- button (click)="rService.clearTable()">Clear table</button> -->
     <!-- Table rows and headings only -->
     <table id="TbIdP1">
         <!-- headings -->
         <tr>
-            <th align="left">Activity</th>
-            <th align="left">Task Name</th>
-            <th>Hours Spent</th>
+            <th>Sub Task</th>
+            <th>Task Name</th>
+            <th style="text-align:center">Hours Spent</th>
         </tr>
     </table>
 </div>
