--- a/src/app/calendar/diary/diary.component.html
+++ b/src/app/calendar/diary/diary.component.html
@@ -74,7 +74,7 @@
               </ol>
             </div>
             <div class="col-md-12 card-footer" style="padding-right: 0px; padding-left: 0px;">
-              <code> add new Task Activity</code>
+              <code> add new Sub-task</code>
               <div class="form-group">
                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                   <input type="text" class="form-control panel-boader" [(ngModel)]="item.name" style=" padding-left: 10px; padding-right: 10px; height:2em"
@@ -112,7 +112,7 @@
           </div>
           <div class="col-md-10 ml-auto mr-auto" *ngIf="actNumber == 0">
             <form>
-              <code> add new Task Activity</code>
+              <code> add new Sub-task</code>
               <div class="form-group">
                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                   <input type="text" class="form-control panel-boader" [(ngModel)]="item.name" name="unplannedWork" style=" padding-left: 10px; padding-right: 10px; height:2em"
@@ -133,7 +133,7 @@
         </div>
         <!-- <div class="row">
           <div class="card-footer col-md-10">
-            <code> add new Task Activity</code>
+            <code> add new Sub-task</code>
           </div>
         </div> -->
       </div>
