--- a/src/app/calendar/r-daily-plan/r-daily-plan.component.html
+++ b/src/app/calendar/r-daily-plan/r-daily-plan.component.html
@@ -7,7 +7,7 @@
 
 <h4 margin-top:-150px>Daily Plan As At <span>
         <input type="date" id="startdateP3">
-        <button (click)="rService.rdailyplan()">Generate Daily Plan</button>
+        <button id="btnP3" (click)="rService.rdailyplan()">Generate Daily Plan</button>
     </span></h4>
 
 <table id="TbIdP3">
@@ -17,5 +17,6 @@
         <th>Task Name</th>
         <th>Planned Start</th>
         <th>Planned Finish</th>
+        <th>Company Name</th>
     </tr>
 </table>
