--- a/src/app/issues/issues.component.css
+++ b/src/app/issues/issues.component.css
@@ -10,5 +10,21 @@
 .vl2 {
     border-left: 6px solid slategrey;
     /* border-left: 6px solid green; */
-    height: 500px;
+    height: inherit;
+}
+
+.vl3 {
+    border-bottom: 6px slategrey;
+    border-bottom-style: dashed;
+    border-width: 2px;
+    /* border-left: 6px solid green; */
+    /* height: 500px; */
+}
+
+.vl4 {
+    border-bottom: 6px slategrey;
+    border-bottom-style: groove;
+    border-width: 2px;
+    /* border-left: 6px solid green; */
+    /* height: 500px; */
 }
