--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -389,7 +389,7 @@
           </div>
         <!-- </form> -->
         <!-- <form> -->
-          <code> add new Task Activity</code>
+          <code> add new Sub-task</code>
           <div class="form-group">
             <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
               <input type="text" class="form-control panel-boader" [(ngModel)]="item.name" name="unplannedWork" style=" padding-left: 10px; padding-right: 10px; height:2em"
@@ -414,7 +414,7 @@
       </div>
       <div class="col-md-10 ml-auto mr-auto" *ngIf="actiondsNo == 0">
         <form>
-          <code> add new Task Activity</code>
+          <code> add new Sub-task</code>
           <div class="form-group">
             <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
               <input type="text" class="form-control panel-boader" [(ngModel)]="item.name" name="unplannedWork" style=" padding-left: 10px; padding-right: 10px; height:2em"
@@ -521,7 +521,7 @@
             </ol>
           </div>
           <div class="col-md-12 footer" style="padding-right: 0px; padding-left: 0px;">
-            <code> add new Task Activity</code>
+            <code> add new Sub-task</code>
             <div class="form-group">
               <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                 <input type="text" class="form-control panel-boader" [(ngModel)]="item.name" style=" padding-left: 10px; padding-right: 10px; height:2em"
@@ -555,7 +555,7 @@
         </div>
         <div class="col-md-10 ml-auto mr-auto" *ngIf="actiondsNo == 0">
           <form>
-            <code> add new Task Activity</code>
+            <code> add new Sub-task</code>
             <div class="form-group">
               <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                 <input type="text" class="form-control panel-boader" [(ngModel)]="item.name" name="unplannedWork" style=" padding-left: 10px; padding-right: 10px; height:2em"
