--- a/src/app/calendar/implementation/implementation.component.html
+++ b/src/app/calendar/implementation/implementation.component.html
@@ -291,7 +291,7 @@
                               </div>
                               <button class="btn-link btn-round primary" (click)="selectTask(tss)" data-toggle="modal"
                                 data-target="#newAction">
-                                <small>Add Task Activity</small>
+                                <small>Add Sub-task</small>
                               </button>
                             </div>
                           </div>
@@ -315,7 +315,7 @@
           </p>
         </div>
         <div class="row card-category clrs-h4-font">
-          <div class="col-sm-4">Task Activity
+          <div class="col-sm-4">Sub-task
           </div>
           <div class="col-sm-6">
             <div class="row">
@@ -410,7 +410,7 @@
         </div>
         <div class="row card-category">
           <div class="col-md-12 col-sm-12">
-            <p class="category">Click Add date to add or edit the start and end date for the Task Activity</p>
+            <p class="category">Click Add date to add or edit the start and end date for the Sub-task</p>
           </div>
         </div>
       </div>
@@ -429,7 +429,7 @@
           <!-- <div class="row" *ngIf= "viewTodaystds || viewTodays"> -->
           <div class="row" *ngIf= "viewTodaystds">
             <div class="card-header text-left"><i class="fa fa-check-box"></i></div>
-            <div class="col-sm-2 card-header text-center">Task Activity<small class="category"> Item</small></div>
+            <div class="col-sm-2 card-header text-center">Sub-task<small class="category"> Item</small></div>
             <div class="col-sm-3 card-header text-right">Target Qty<small class="category"> for today</small></div>
             <div class="col-sm-2 card-header text-left">Start time</div>
             <div class="col-sm-2 card-header text-left">Finish time</div>
@@ -554,8 +554,8 @@
                 <p class="category">To create new task under<b> Daily Diary </b>If the new activity does not belong to any existing task Goto Planning & create the Task for your activity and remember to add the task to weekly Tasks</p>
               </div>
               <div class="col-md-3 text-right">
-                <button class="primary btn-link" data-toggle="modal" data-target="#newActionToday" rel="tooltip" title="Create new Task Activity"> <!-- (click)="selectEditAction(item);showActionParticipants()"  -->
-                  New Task Activity
+                <button class="primary btn-link" data-toggle="modal" data-target="#newActionToday" rel="tooltip" title="Create new Sub-task"> <!-- (click)="selectEditAction(item);showActionParticipants()"  -->
+                  New Sub-task
                 </button>
               </div>
             </div>
@@ -607,17 +607,17 @@
       <div class="card-body ">
         <div class="card-header text-center">
           <p class="col-md-8 ml-auto mr-auto col-form-label info" style="color:steelblue">
-            <font size=4>New Task Activity for <br>{{ selectedTask.name }} task</font>
+            <font size=4>New Sub-task for <br>{{ selectedTask.name }} task</font>
           </p>
         </div>
         <!-- <a *ngIf="setUnit.id"> Selected Unit: <span></span><small> {{ (setUnit)?.id }}</small></a><br> -->
         <hr>
         <form class="form-horizontal">
           <div class="row">
-            <label class="col-md-4 col-form-label">New Activity Name</label>
+            <label class="col-md-4 col-form-label">Sub-task Name</label>
             <div class="col-md-7">
               <div class="form-group">
-                <input type="text" [(ngModel)]="actionItem.name" name="taskName" class="form-control" placeholder="New Activity name">
+                <input type="text" [(ngModel)]="actionItem.name" name="taskName" class="form-control" placeholder="New Sub-task name">
               </div>
             </div>
           </div>
@@ -669,7 +669,7 @@
       <div class="card-body ">
         <div class="card-header text-center">
           <p class="col-md-8 ml-auto mr-auto col-form-label info" style="color:steelblue">
-            <font size=4>Edit New Activity item <br> "{{ selectedAction.name }}"</font>
+            <font size=4>Edit New Sub-task item <br> "{{ selectedAction.name }}"</font>
           </p>
         </div>
         <hr>
@@ -713,8 +713,8 @@
       <div class="card-body ">
         <div class="card-header text-center">
           <p class="col-md-8 ml-auto mr-auto col-form-label clrs-h1-font info" style="color:steelblue">
-            <!-- <font size=4>Edit New Activity item <br> "{{ selectedClassAction.name }}"</font> -->
-            Edit New Activity item <br> "{{ selectedClassAction.name }}"
+            <!-- <font size=4>Edit New Sub-task item <br> "{{ selectedClassAction.name }}"</font> -->
+            Edit New Sub-task item <br> "{{ selectedClassAction.name }}"
           </p>
         </div>
         <hr>
