--- a/src/app/calendar/r-weekly-plan/r-weekly-plan.component.html
+++ b/src/app/calendar/r-weekly-plan/r-weekly-plan.component.html
@@ -7,7 +7,7 @@
 
 <h4 margin-top:-150px>Weekly Plan As At <span>
         <input type="date" id="startdateP4">
-        <button (click)="rService.rweeklyplan()">Generate Weekly Plan</button>
+        <button id="btnP4" (click)="rService.rweeklyplan()">Generate Weekly Plan</button>
     </span></h4>
 
 <table id="TbIdP4">
@@ -17,5 +17,6 @@
         <th>Task Name</th>
         <th>Planned Start</th>
         <th>Planned Finish</th>
+        <th>Company Name</th>
     </tr>
 </table>
