--- a/src/app/individual-rpts/r-activity-log-e/r-activity-log-e.component.html
+++ b/src/app/individual-rpts/r-activity-log-e/r-activity-log-e.component.html
@@ -2,7 +2,7 @@
 <h3 id="org2">Personal Reports</h3>
 
 <h3>Participant:
-    <span><select id="name-list2" (click)="rService.getParticipantData('name-list2','')"></select></span>
+    <span><select id="name-list2"></select></span>
     <span> &nbsp;&nbsp; Hierarchy:</span><span>{{rService.User_Hky}}</span></h3>
 
 <h4>Time Sheet Report for the period from <span>
@@ -10,7 +10,7 @@
         <input type="date" id="startdate2">
     </span> to <span>
         <input type="date" id="enddate2">
-        <button (click)="rService.ractivitylog_e()">Generate report for selected period</button>
+        <button id="btn2" (click)="rService.ractivitylog_e()">Generate report for selected period</button>
     </span></h4>
 
 <!-- button onclick="javascript:alert('kkkkk')">Try it</button> -->
