--- a/src/app/individual-rpts/r-daily-plan-e/r-daily-plan-e.component.html
+++ b/src/app/individual-rpts/r-daily-plan-e/r-daily-plan-e.component.html
@@ -1,12 +1,12 @@
 <h3 id="org3">Personal Reports</h3>
 
 <h3>Participant:
-    <span><select id="name-list3" (click)="rService.getParticipantData('name-list3','')"></select></span>
+    <span><select id="name-list3"></select></span>
     <span> &nbsp;&nbsp; Hierarchy:</span><span>{{rService.User_Hky}}</span></h3>
 
 <h4 margin-top:-150px>Daily Plan As At <span>
         <input type="date" id="startdate3">
-        <button (click)="rService.rdailyplan_e()">Generate Daily Plan</button>
+        <button id="btn3" (click)="rService.rdailyplan_e()">Generate Daily Plan</button>
     </span></h4>
 
 <table id="TbId3">
