--- a/src/app/individual-rpts/r-os-actions-e/r-os-actions-e.component.html
+++ b/src/app/individual-rpts/r-os-actions-e/r-os-actions-e.component.html
@@ -1,19 +1,15 @@
 
 <h3 id="org00">Personal Reports</h3>
-<!-- <div class="card-header text-left" *ngIf="enterprise !== '' || enterprise === undefined">
-    <h2>Enterprise: {{ enterprise }} Personal Reports</h2>
-</div><br> -->
 
 <h3>Participant: 
-<span><select id = "name-list00" (click)="rService.getParticipantData('name-list00','')"></select></span>
+<span><select id = "name-list00"></select></span>
 <span> &nbsp;&nbsp; Hierarchy:</span><span>{{rService.User_Hky}}</span></h3>
 
 <h4>Outstanding activities as at <span>
 		<!-- placeholder will not work, so stuck with dd----yyyyy -->
 		<input type="date" id="startdate00">
 	<!-- </span> to <span> -->
-		<!-- <input type="date" id="enddate" (click)="rService.getParticipantData()"> -->
-<button (click)="rService.rosactions_e()">Generate report for selected period</button>
+<button id="btn00" click)="rService.rosactions_e()">Generate report for selected period</button>
 </span></h4>
 <!-- button onclick="javascript:alert('kkkkk')">Try it</button> -->
 <!-- button (click)="rService.clearTable()">Clear table</button> -->
