--- a/src/app/individual-rpts/r-weekly-plan-e/r-weekly-plan-e.component.html
+++ b/src/app/individual-rpts/r-weekly-plan-e/r-weekly-plan-e.component.html
@@ -1,12 +1,12 @@
 <h3 id="org4">Personal Reports</h3>
 
 <h3>Participant:
-    <span><select id="name-list4" (click)="rService.getParticipantData('name-list4','')"></select></span>
+    <span><select id="name-list4"></select></span>
     <span> &nbsp;&nbsp; Hierarchy:</span><span>{{rService.User_Hky}}</span></h3>
 
 <h4 margin-top:-150px>Weekly Plan As At <span>
         <input type="date" id="startdate4">
-        <button (click)="rService.rweeklyplan_e()">Generate Weekly Plan</button>
+        <button id="btn4" (click)="rService.rweeklyplan_e()">Generate Weekly Plan</button>
     </span></h4>
 
 <table id="TbId4">
