Update VJS 25-June-2019

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -39,7 +39,9 @@
                       <a class="nav-link" href="#implem" (click)="minimizeSidebar()" role="tab" data-toggle="tab">Implementation</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#reports" (click)="minimizeSidebar()" role="tab" data-toggle="tab">Reporting</a>
+                       <!-- Amended 19-June-19 By VJ Sibanda -->     
+                       <a class="nav-link" (click)="minimizeSidebar()" routerLink="/personal-r" role="tab" data-toggle="tab">Reporting</a>
+                      <!--a class="nav-link" href="#reports" (click)="minimizeSidebar()" role="tab" data-toggle="tab">Reporting</a>-->
                     </li>
                     <li class="nav-item">
                       <a class="nav-link nav-colors" href="#popups" (click)="minimizeSidebar();" role="tab" data-toggle="tab">Diary</a>
