--- a/src/app/company/enterprise-profile/enterprise-profile.component.html
+++ b/src/app/company/enterprise-profile/enterprise-profile.component.html
@@ -52,7 +52,9 @@
                       <a class="nav-link " (click)="minimizeSidebar()" href="#implement" role="tab" data-toggle="tab">Implementation</a><!-- sortTasks(); -->
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " (click)="minimizeSidebar()" href="#reports" role="tab" data-toggle="tab">Reporting</a>
+                        <!-- Amended 19-June-19 By VJ Sibanda -->     
+                        <a class="nav-link" (click)="minimizeSidebar()" routerLink="/enterprise-r" role="tab" data-toggle="tab">Reporting</a>
+                        <!--a class="nav-link " (click)="minimizeSidebar()" href="#reports" role="tab" data-toggle="tab">Reporting</a>-->
                     </li>
                   </ul>
                 </div>
