--- a/src/app/individual-rpts/r-daily-plan-e/r-daily-plan-e.component.html
+++ b/src/app/individual-rpts/r-daily-plan-e/r-daily-plan-e.component.html
@@ -1,3 +1,13 @@
+<div class="main-content">
+    <div class="card card-body">
+    <div style="text-align:left;margin-left: 0px">
+        <img alt="Colours Logo" width="100" src="../../assets/Colourslogo.png">
+    </div>
+    
+    <div style="text-align: right">
+        <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
+    </div> 
+
 <h3 id="org3">Personal Reports</h3>
 
 <h3>Participant:
@@ -18,3 +28,5 @@
         <th>Planned Finish</th>
     </tr>
 </table>
+</div>
+</div>
