--- a/src/app/individual-rpts/r-os-actions-e/r-os-actions-e.component.html
+++ b/src/app/individual-rpts/r-os-actions-e/r-os-actions-e.component.html
@@ -1,3 +1,13 @@
+<div class="main-content">
+    <div class="card card-body">
+    <div style="text-align:left;margin-left: 0px">
+        <img alt="Colours Logo" width="100" src="../../assets/Colourslogo.png">
+    </div>
+    
+    <div style="text-align: right">
+        <button class="btn-link btn-magnify" (click)="rService.printReport()">Print</button> 
+        <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
+    </div> 
 
 <h3 id="org00">Personal Reports</h3>
 
@@ -25,3 +35,5 @@
         <th style="text-align:center"> Logged</th>
     </tr>
 </table>
+</div>
+</div>
