--- a/src/app/individual-rpts/r-os-tasks-e/r-os-tasks-e.component.html
+++ b/src/app/individual-rpts/r-os-tasks-e/r-os-tasks-e.component.html
@@ -1,3 +1,14 @@
+<div class="main-content">
+    <div class="card card-body">
+    <div style="text-align:left;margin-left: 0px">
+        <img alt="Colours Logo" width="100" src="../../assets/Colourslogo.png">
+    </div>
+
+    <div style="text-align: right">
+        <button class="btn-link btn-magnify" (click)="rService.printReport()">Print</button> 
+        <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
+    </div> 
+
 <h3 id="org0">Personal Reports</h3>
 
 <h3>Participant: 
@@ -18,3 +29,5 @@
         <th>Classification</th>
     </tr>
 </table>
+</div>
+</div>
