--- a/src/app/calendar/dashboard-personal-reports/dashboard-personal-reports.component.html
+++ b/src/app/calendar/dashboard-personal-reports/dashboard-personal-reports.component.html
@@ -25,7 +25,7 @@
     <div id="my-tab-content" class="tab-content text-center">
       <!-- start Here -->
       
-<!-----------------------------------------------PERSONAL---------------------------------------------->
+<!-----------------------------------------------PRIVATE---------------------------------------------->
 
       <div class="tab-pane active" id="personal" role="tabpanel" aria-expanded="true">
         <!-- <code>personal</code> -->
@@ -40,6 +40,26 @@
           </div>
         </div>
         
+        <div class="col-md-12 ml-auto mr-auto">
+          <div class="row">
+            <div class="col-md-6">
+              <p class="text-left title " style="color: darkslategray">
+                <span> <a routerLink="/r-timebudget">My Time Budget</a></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-12 ml-auto mr-auto">
+          <div class="row">
+            <div class="col-md-6">
+              <p class="text-left title " style="color: darkslategray">
+                <span> <a routerLink="/r-timeactual">My Time Actuals</a></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
         <div class="col-md-12 ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
