--- a/src/app/individual-rpts/r-daily-plan-e/r-daily-plan-e.component.html
+++ b/src/app/individual-rpts/r-daily-plan-e/r-daily-plan-e.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="card card-body">
     <div style="text-align:left;margin-left: 0px">
-        <img alt="Colours Logo" width="100" src="../../assets/Colourslogo.png">
+        <img alt="Colours Logo" width="100" src="../../../assets/img/Colourslogo.PNG">
     </div>
     
     <div style="text-align: right">
