--- a/src/app/calendar/r-activity-log/r-activity-log.component.html
+++ b/src/app/calendar/r-activity-log/r-activity-log.component.html
@@ -2,7 +2,7 @@
     <div class="card card-body">
 
     <div style="text-align:left;margin-left: 0px">
-        <img alt="Colours Logo" width="100" src="../../assets/Colourslogo.PNG">
+        <img alt="Colours Logo" width="100" src="../../../assets/img/Colourslogo.PNG">
     </div>
     
     
